--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,14 @@
   <groupId>org.example</groupId>
   <artifactId>AppCRUD</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <dependencies>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-testng</artifactId>
+      <version>0.4.30</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
@@ -26,6 +34,19 @@
               <groupId>mysql</groupId>
               <artifactId>mysql-connector-java</artifactId>
               <version>8.0.31</version>
+            </dependency>
+            <dependency>
+              <groupId>junit</groupId>
+              <artifactId>junit</artifactId>
+              <version>4.10</version>
+              <scope>test</scope>
+            </dependency>
+
+            <dependency>
+              <groupId>org.mockito</groupId>
+              <artifactId>mockito-core</artifactId>
+              <version>4.9.0</version>
+              <scope>test</scope>
             </dependency>
           </dependencies>
         </plugin>
